[project]
name = "universal-diffsae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.0.1",
    "bitsandbytes==0.44.1",
    "clip",
    "datasets==3.2.0",
    "deepspeed>=0.16.4",
    "diff-gaussian-rasterization",
    "diffusers==0.32",
    "dvc>=3.59.1",
    "einops==0.8.0",
    "fire==0.7.0",
    "huggingface-hub==0.26.2",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "kiui>=0.2.14",
    "loguru>=0.7.3",
    "lpips>=0.1.4",
    "matplotlib==3.10.0",
    "natsort==8.4.0",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "plyfile>=1.1",
    "psutil==6.1.0",
    "pyarrow>=19.0.1",
    "pyyaml==6.0.2",
    "redis>=5.2.1",
    "rembg[gpu]>=2.0.65",
    "ruff>=0.11.0",
    "safetensors==0.5.2",
    "scipy==1.15.1",
    "sentencepiece>=0.2.0",
    "simple-parsing==0.1.7",
    "terminaltables==3.1.10",
    "timm==1.0.14",
    "torch==2.5.1",
    "torchaudio>=2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.66.6",
    "transformers==4.46.1",
    "triton==3.1.0",
    "wandb==0.19.5",
    "xformers==0.0.29.post1",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.9
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F722"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
diff-gaussian-rasterization = { git = "https://github.com/BaowenZ/RaDe-GS/", subdirectory = "submodules/diff-gaussian-rasterization" }
